--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.23.2",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "gulp-clean-css": "3.9.2",
     "merge-stream": "1.0.1",
     "lodash": "^4.17.4"
   }
