--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "George Koukoudis",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
-    "eslint": "^4.14.0",
+    "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.9",
@@ -19,11 +18,20 @@
     "moment": "^2.20.1"
   },
   "devDependencies": {
+    "babel-eslint": "8.2.1",
     "browser-sync": "^2.23.2",
+    "eslint": "^4.16.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "7.6.1",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
     "gulp-clean-css": "3.9.2",
-    "merge-stream": "1.0.1",
-    "lodash": "^4.17.4"
+    "gulp-sass": "^3.1.0",
+    "lodash": "^4.17.4",
+    "merge-stream": "1.0.1"
   }
 }
